# gemini-repl-005

./: .env.example  .envrc  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI-REPL-PROMPTS.org  Makefile  Makefile.main  OBSERVER-HANDOFF.org  PYTHON-GEMINI-REPL.org  README.md  README.org  REGENERATION.org  RELEASE_NOTES.md  TESTING_SUMMARY.md  architecture.mmd  main.py  org-babel-config.el  org-babel-demo.org  pyproject.toml  requirements.txt  setup.sh  test_ai_response_parsing.py  test_all_fixes.py  test_break_structured_dispatch.py  test_specific_breaks.py
.ai/: context-eval.json  generate_resurrection_prompt.sh  project-context.md
.claude/: context.md
.devcontainer/: README.md  devcontainer.json
change-requests/: README.md
docs/: MANUAL_TESTING.md  PYTHON_EXECUTION_SECURITY.md  RATE_LIMITS.md  RFC-planning-todos-dispatch.md  SECURITY.md  STRUCTURED_DISPATCH_FIXES.md  STRUCTURED_DISPATCH_IMPLEMENTATION_PLAN.md  STRUCTURED_DISPATCH_SIGNOFF.md  SYSTEM_PROMPTS.md  bug-29-ai-not-using-tools.md  rfc-issue-content.md
examples/: fibonacci_workflow.md  test-summarize.md
experiments/: README.md  control-flow-bug-analysis.md  deep-control-flow-trace.md  expect_test_fibonacci_workflow.exp  test-tool-chaining.py
research/: README.md
resources/: system_prompt.txt  system_prompt_verbose.txt
scripts/: SCRIPT_STYLE_GUIDE.org  build.sh  common.sh  dashboard-simple.sh  dashboard.sh  lint.sh  run.sh  setup.sh  test.sh  validate_setup.sh
tests/: manual_integration_test.py  test_api_client.py  test_bug_29_advisory_behavior.py  test_logger.py  (+13 more)
(+80 files in other folders)
