[project]
name = "gemini-repl-005"
version = "0.1.0"
description = "Python-based REPL with Gemini AI integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.26.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "tiktoken",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.17.0",
]
